ISoodaCacheView - for cache-viewing utilities

--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Caching\CacheUtils.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Caching\ISoodaCacheView.cs" />
     <Compile Include="Caching\SoodaCacheKey.cs" />
     <Compile Include="Caching\LruCache.cs" />
     <Compile Include="Caching\ISoodaCacheLock.cs" />
