--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -96,6 +96,8 @@
     <Compile Include="Caching\CacheUtils.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Caching\ISoodaCachingPolicyFixedTimeout.cs" />
+    <Compile Include="Caching\SimpleCachingPolicy.cs" />
     <Compile Include="Caching\ISoodaCacheView.cs" />
     <Compile Include="Caching\SoodaCacheKey.cs" />
     <Compile Include="Caching\LruCache.cs" />
