--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
@@ -180,6 +181,9 @@
     <Compile Include="Config\XmlConfigProvider.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SoodaHttpContextBoundTransactionStrategy.cs" />
+    <Compile Include="SoodaThreadBoundTransactionStrategy.cs" />
+    <Compile Include="IDefaultSoodaTransactionStrategy.cs" />
     <Compile Include="ISoodaObjectFactory.cs">
       <SubType>Code</SubType>
     </Compile>
