SoodaObjectDataSource - specialized ASP.NET 2.0 DataSource for handing sooda objects

--- a/src/Sooda.Web.Tests/Web.config
+++ b/src/Sooda.Web.Tests/Web.config
@@ -20,6 +20,8 @@
             ASP.NET to identify an incoming user. 
         -->
         <authentication mode="Windows" />
+
+        <trace enabled="true"/>
         <!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
