upgraded NLog to 1.0-RC1, added SoodaFieldSizeAttribute

--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Config\XmlConfigProvider.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SoodaFieldSizeAttribute.cs" />
     <Compile Include="SoodaHttpContextBoundTransactionStrategy.cs" />
     <Compile Include="SoodaThreadBoundTransactionStrategy.cs" />
     <Compile Include="IDefaultSoodaTransactionStrategy.cs" />
