fix for ImageFieldHandler to work with Northwind database which has broken images added <collectionManyToMany foreignField="..." /> instead of the confusing masterField. SoodaTransaction now inherits from Component added set IDENTITY_INSERT to properly insert into tables with identity columns reverse engineering now suggests 1-N and M-N collections

--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -671,7 +671,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SoodaTransaction.cs">
-      <SubType>Code</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="SoodaTuple.cs">
       <SubType>Code</SubType>
