Added <loader-class /> More documentation work.

--- a/src/Sooda.CodeGen/Sooda.CodeGen-net-2.0.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen-net-2.0.csproj
@@ -179,6 +179,9 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CDIL\Templates\Loader.cdil" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
