--- a/tests/ConsoleTest/ConsoleTest-net-2.0.csproj
+++ b/tests/ConsoleTest/ConsoleTest-net-2.0.csproj
@@ -73,10 +73,6 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Sooda.UnitTests.BaseObjects.Boo, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\build\net-2.0-debug\bin\Sooda.UnitTests.BaseObjects.Boo.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -104,6 +100,10 @@
       <Name>Sooda</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+    </ProjectReference>
+    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects-net-2.0.csproj">
+      <Project>{A1D122ED-CF84-4EF0-A138-72922DD50409}</Project>
+      <Name>Sooda.UnitTests.BaseObjects-net-2.0</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
