bugfix for invalid events being called after precommit, doc

--- a/tests/ConsoleTest/App.config
+++ b/tests/ConsoleTest/App.config
@@ -18,7 +18,7 @@
         </appenders>
 
         <rules>
-            <logger name="Sooda.Cache" appendTo="console" />
+            <logger name="Sooda.*" appendTo="console" />
         </rules>
     </nlog>
 </configuration>
